Add pedestrian management functionality with crosswalk integration